Update greeting and closing in index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="side two">
             <h2>🌷🌷🌷</h2>
-            <p>Querido(a) [nombre],</p>
+            <p>Querida MILY,</p>
             <p>
                 En este San Valentín, quiero recordarte lo especial que eres. Cada sonrisa compartida, cada momento
                 juntos es un tesoro. Eres una persona maravillosa, tanto por dentro como por fuera. Valoro cada instante
@@ -34,8 +34,8 @@
                 ¡Feliz San Valentín!
             </p>
             <p>
-                Con cariño,<br>
-                [nombre]
+                Con mucho cariño,<br>
+            
             </p>
         </div>
     </div>
