Update Valentine's message in index.html

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <h2>🌷🌷🌷</h2>
             <p>Querida MILY,</p>
             <p>
-                En este San Valentín, quiero recordarte lo especial que eres. Cada sonrisa compartida, cada momento
-                juntos es un tesoro. Eres una persona maravillosa, tanto por dentro como por fuera. Valoro cada instante
-                compartido. Gracias por ser quien eres. 🫶
+                En este San Valentín quería decirte que me gusta mucho este momento que estamos compartiendo. Aunque todavía no seamos nada “formal”, disfruto cada salida, cada conversación y cada risa contigo.
+                Me encanta que todo esté fluyendo de forma natural, sin prisas, con esa emoción de ir descubriéndonos poco a poco.
+                Gracias por estos momentos y por la buena vibra que traes a mis días. Sea lo que sea que venga, me alegra estar viviéndolo contigo. 🫶
             </p>
             <p>
                 ¡Feliz San Valentín!
