Update Valentine's message for clarity and warmth
Revised Valentine's message for a more heartfelt expression.

--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
             <h2>🌷🌷🌷</h2>
             <p>Querida MILY,</p>
             <p>
-                En este San Valentín quería decirte que me gusta mucho este momento que estamos compartiendo. Aunque todavía no seamos nada “formal”, disfruto cada salida, cada conversación y cada risa contigo.
-                Me encanta que todo esté fluyendo de forma natural, sin prisas, con esa emoción de ir descubriéndonos poco a poco.
-                Gracias por estos momentos y por la buena vibra que traes a mis días. Sea lo que sea que venga, me alegra estar viviéndolo contigo. 🫶
+                En este San Valentín quería decirte que me encanta lo que estamos compartiendo. Cada momento contigo se siente especial y muy natural. Me gusta lo fácil que es hablar contigo, reírnos de cualquier cosa y simplemente disfrutar del tiempo juntos.
+                Gracias por estos momentos tan bonitos y por la buena energía que traes a mi vida. De verdad los valoro mucho… y te quiero mucho 🫶
             </p>
             <p>
                 ¡Feliz San Valentín!
